--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,11 @@ body {
 h1 {
 	font-size: 3rem;
 	font-weight: 700;
+	text-align: center;
 }
 
 .content {
-	margin: 150px auto;
+	margin: 80px auto 0;
 	width: 60%;
 	height: auto;
 	background-color: beige;
@@ -33,17 +34,19 @@ h1 {
 }
 
 figure {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 350px;
-	height: 350px;
+	width: 80%;
+	height: 100%;
 }
 
 .coffee-cup {
 	width: 100%;
 	height: 100%;
+	max-width: 350px;
 	margin-left: 70px;
 	position: relative;
 	z-index: 1;
@@ -52,9 +55,9 @@ figure {
 
 
 .button {
-	width: 200px;
+	width: 100%;
 	height: 50px;
-	border: 3px solid black;
+	border: 4px solid black;
 	border-radius: 10px;
 	background-color: #825331;
 	font-size: 22px;
@@ -66,19 +69,26 @@ figure {
 
 .coffee {
 	background-color: #825331;
-	height: 0px;
-	width: 211px;
+	height: 100%;
+	max-height: 250px;
+	width: 100%;
+	max-width: 211px;
 	position: absolute;
-	display: block;
-	bottom: 40%;
+	bottom: 70px;
 	z-index: 0;
 	border-radius: 0 0 50px 50px;
-
 } 
 
 .coffee-buttons {
-display: flex;
-gap: 10px;
+	width: 80%;
+	max-width: 300px;
 }
 
+.buttons-under {
+	display: flex;
+	gap: 10px;
+}
 
+.drink-button {
+	margin-bottom: 10px
+}
