--- a/css/_buttons.css
+++ b/css/_buttons.css
@@ -3,6 +3,7 @@ button {
 	height: 50px;
 	border: 4px solid black;
 	border-radius: 10px;
+	color: black;
 	background-color: #825331;
 	font-size: 20px;
 	font-weight: 600;
